tests/neg/i18657.scala
//> using options -explain
val f: (Int, Int) => Int = Integer.compare(_ + 1, _)  // error
