tests/neg/i18657.check
-- [E086] Syntax Error: tests/neg/i18657.scala:2:27 --------------------------------------------------------------------
2 |val f: (Int, Int) => Int = Integer.compare(_ + 1, _)  // error
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^
  |                           Wrong number of parameters, expected: 2
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | The function literal
  |
  |     _$2 => Integer.compare(_$1 => _$1 + 1, _$2)
  |
  | has 1 parameter. But the expected type
  |
  |     (Int, Int) => Int
  |
  | requires a function with 2 parameters.
   ---------------------------------------------------------------------------------------------------------------------
